--- a/features.htm
+++ b/features.htm
@@ -135,51 +135,35 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="images/full_fasting-for-beginners.jpg" alt="knife fork and empty plate" width="138" height="85"></a><br>
+                  <a href="images/in-praise-of-small-churches.jpg"><img src="images/in-praise-of-small-churches.jpg" alt="" name="authorpic" width="64" height="85" id="authorpic" /></a><br>
   </div>
-                <h2>Pray Fasting And Empower<br>
-What Who Where When and Why? </h2>
-                <p>To deny the flesh in order to be more keenly aware of God&rsquo;s  presence, direction and power. It is a discipline that pleases God, which is to  be accompanied by prayer and cleansing. Fasting alone, is like a hollow  building. It looks good on the outside, but its missing something  <br>
-                  ...<a href="pray-fasting-and-empower.html">Read More</a><br>
-              </p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="images/movement-day-2.jpg" alt="" name="authorpic" width="199" height="85" id="authorpic3" /></a><br>
-  </div>
-                <h2>Why Racial Reconciliation </h2>
-                <p>When Pete  Scazzero founded New Life Fellowship Church in Queens, NY, in 1987 he  envisioned a church that would bridge a community across racial, cultural and  economic lines. With members from more than 70 nations  eventually filling his pews, Scaz&shy;- zero, who is white, soon realized his  vision was in trouble                    ...<a href="why-racial-reconciliation.html">Read More</a><br>
+                <h2>In Praise of Small Churches</h2>
+                <p>With a few  exceptions, all churches were small at one time. They began with a handful of  people and went forward from there. Some grew a great deal and are still  expanding, some grew a little and leveled off, while some failed to grow at  all. If most of the churches in America of  all denominations are small -- and in my mind, that means  
+                  ...<a href="in-praise-of-small-churches.html">Read More</a><br>
               </p>
 <div id="articlepic">
   <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="images/christmas-cantata.jpg" alt="" width="149" height="85" /></a><br>
+  <br>
 </div>
-                <h2>The Night the Angels Sang</h2>
-                <p>A must see for the holiday season! Ex&shy;pe&shy;ri&shy;ence the grandeur and majesty of one of the lon&shy;gest running and largest <strong>Christmas shows by Up&shy;per Room Christian World Center on Long Is&shy;land.</strong> En&shy;titled &ldquo;<strong>The Night the An&shy;gels Sang</strong>, this magnificent production evolves every year with newly up&shy;dated scenes. <strong>Friday, Dec. 18th @ 7:30pm; Saturday, </strong>  ...<a href="the-night-the-angles-sang.html#credits">Read More</a><br>
+                <h2>&ldquo;Stepping Out of the Ordinary
+              into the ExtraOrdinary&rdquo;</h2>
+                <p>What are Confessions? Confessions are  proclamations of the Word of God. When we give voice to God&rsquo;s Word, we give the  written word power and authority in our lives.  When we speak the Word of God in faith, we unleash the power of the  angels to work on our behave to bring to pass the stated promises of God. Open  Your Mouths and Proclaim the Promises of God for Your Life!                    ...<a href="stepping-out-of-the-ordinary.html">Read More</a><br>
+              </p>
+<div id="articlepic">
+  <div class="photocredits2"> </div>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/dimassalaberriosgreyheadshot.jpg" alt="Dimas Salaberrios" name="authorpic2" width="65" height="85" id="authorpic2" /></a><br>
+</div>
+                <h2>25 Years of Unity:
+Concerts of Prayer Greater New York</h2>
+                <p>As the  author of <strong>Street God</strong> and <strong>President of Concerts of Prayer Greater New  York</strong> I have the privilege of traveling from cities to cities and examine  prayer movements. The Tri-State has the unique distinction of praying toge&shy;ther  for 25 years. Most cities have prayer movements that rise and fall but very few  have clergy ...<a href="25-years-of-unity.html">Read More</a><br>
               </p>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <br>
+                  <img src="images/francis-chan.jpg" alt="" name="authorpic" height="85" id="authorpic3" /><br>
   </div>
-                <h2>&lsquo;Twas The Night Before Jesus&rsquo;</h2>
-                <p>Twas the night before Jesus Came and all through the house <br>
-Not a creature was praying, not one in the house.<br>
-Their Bibles were lain on the shelf without care <br>
-In hopes that Jesus would not come there<br>
-The children were dressing to crawl into bed.   ...<a href="twas-the-night-before-christmas.html">Read More</a><br>
-              </p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"></a><br>
-  </div>
-                <h2>Healing Through The Word</h2>
-                <p>Christmas is the most precious time of the year- because it  is the day we celebrate the birth of our Lord and Savior Jesus Christ. On this  holiday something supernaturally permeates the atmosphere, its God&rsquo;s love do  you feel it? It is supernatural because some of the strangest people are  touched and changed by it, absolutely amazing!   ...<a href="ellencomis-healing-through-the-word.html">Read More</a><br>
-              </p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" height="85" id="authorpic4" /></a><br>
-  </div>
-                <h2>The Gospel of Jesus Christ </h2>
-                <p>Gospel means &ldquo;good news.&rdquo; It starts back in the Garden of  Eden.&nbsp; God&ndash;The Father, The Word, and Holy  Spirit &ndash; One God in three persons - created man out of the dust of the earth,  and then created woman out of one of Adam&rsquo;s ribs. (Jn. 1:1; Gen. 2:7, 21-22). He  created them for fellowship with Himself and to give Him glory. He told the  sole residents of earth to enjoy  ...<a href="jimbiscardi-about-my-fathers-business.html">Read More</a></p></div></div>
+                <h2>Collyde Summit 2016 </h2>
+                <p>O<b>ur greatest fear should not be of failure but  of succeeding at things in life that don't really matter&quot;</b> says,  Francis Chan, best-selling author of Crazy Love, Forgotten God and many other  videos and books. As leaders, pastors and believers, our constant struggle is  to turn away from the noise-cluttered busy ministry world we live in and  quieten our hearts to hear   ...<a href="collyde-summit-2016.html">Read More</a><br>
+              </p></div></div>
           <!--SECTION LEFT BEGIN-->
           <div id="section_left" style="float:left;"></div>
           <!--SECTION LEFT END-->
