--- a/van-nest-AOG.html
+++ b/van-nest-AOG.html
@@ -75,16 +75,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img src="images/jamesodavis3.jpg" alt="" width="160" height="156" id="authorpic" /> </div>
+            <div><img src="images/davis-james-o-.jpg" alt="" name="authorpic" width="110" height="150" id="authorpic" /><img src="images/nix-keith.jpg" width="110" height="150" alt="Nix Kieth"><img src="images/calderon-wendy-payne.jpg" width="120" height="149" alt="Calderon Payne"><img src="images/kornacki-evangelist-carol.jpg" width="128" height="150" alt="Carol Kornacki"> </div>
             <h4 id="articleTitle">Van Nest AOG </h4>
               <div id="authorname"><!--SECTION LEFT END--></div>
               
-              <p><strong>Van Nest Assembly of God Church</strong> pre&shy;sents  special ser&shy;vice on <strong>Friday, January 9th,  8pm </strong>and <strong>Sunday, January 11th,  8:30am, 10am, 11:30am, 4pm</strong> &amp; <strong>7pm</strong> special guest speaker <strong>James O. Davis</strong></p>
-              <p>Also join  us for our <strong>Me&shy;mo&shy;rial Service for the Un&shy;born,  Sunday, January 25th</strong> @ <strong>4pm </strong>with guest speakers <strong>Dr. Joseph Ve&shy;tere</strong> &amp; <strong>Pastor Jesus Goy&shy;co</strong>,  Remembering those who were killed in the womb through abortion.</p>
-              <p class="articlecredits"><em>For additional  information please call us at (718) 824-4067 or you can also visit us at www.  vannestassembly.org</em> </p>
-</div>
-          <div id="body_adspace"></div>
-          <!-- InstanceEndEditable --> 
+              
+              <p>Join the <strong>Van Nest Assembly of God</strong> as we present <strong>James O. Da&shy;vis, Friday, Jan. 8th,  8pm &amp; Sun, Jan. 10th, 8:30am, 10am &amp; 11:30am; Keith Nix,  Sunday, Jan. 10th, 7pm; Memorial Ser&shy;vice for the Unborn </strong>with  guest speaker<strong> Wendy Cal&shy;deron Payne, Sunday Jan. 24th,  4pm; and Evangelist Carol Kornacki, Friday, Jan. 29th, 8pm;&nbsp; Sunday Jan. 31st, 8:30am, 10am,  11:30am &amp; 7pm</strong>. Location: 755 Rhinelander Avenue, Bronx, New York 10462. <strong>Host Pasto</strong>r <strong>Rev. David H. Hernquist, Pastor</strong></p>
+              <p><strong><em>For additional information please call  us at (718) 824-4067 or you can also visit us at www.van nestassembly.org</em></strong></p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
